--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "sequelize": "^3.30.0",
     "sequelize-cli": "^2.5.1",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  }
+  }//,
+  // "devDependencies": {
+  //   "nodemon": "^1.11.0"
+  // }
 }
